# chess

./: .travis.yml  CMakeLists.txt
backend/: chess.cpp  chess.h
demos/backend/: CMakeLists.txt
demos/engine/: CMakeLists.txt
include/chess/backend/: bitboard.hpp  bitscan.hpp  board.hpp  move.hpp  piece.hpp
include/chess/engine/: eval.hpp
src/backend/: CMakeLists.txt
src/engine/: CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/engine/: CMakeLists.txt
